--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -22,7 +22,7 @@
  {\bf $201613023$ } & {\bf  $1$ } & {\bf  $0.08$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.0016$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.15$ } & {\bf  $0.0016$} \\
  {\bf $201546283$ } & {\bf  $1$ } & {\bf  $0.15$ } & {\bf  $< 10^{-4}$ } & {\bf  $< 10^{-4}$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.16$ } & {\bf  $< 10^{-4}$} \\
 $201779067$ & $1$ & $1.97$ & $0.034$ & $0.038$ & $0.3$ & $0.03$ & $0.37$ \\
- \color{red} $201257461$ \color{black} & \color{red}  $1$ \color{black} & \color{red}  $0.59$ \color{black} & \color{red}  $< 10^{-4}$ \color{black} & \color{red}  $0.072$ \color{black} & \color{red}  $0.93$ \color{black} & \color{red}  $0.22$ \color{black} & \color{red}  $1$\color{black} \\
+ \cellcolor{red} $201257461$  & \cellcolor{red}  $1$  & \cellcolor{red}  $0.59$  & \cellcolor{red}  $< 10^{-4}$  & \cellcolor{red}  $0.072$  & \cellcolor{red}  $0.93$  & \cellcolor{red}  $0.22$  & \cellcolor{red}  $1$\\
 $201828749$ & $1$ & $0.39$ & $< 10^{-4}$ & $0.014$ & $0.0024$ & $0.17$ & $0.016$ \\
 $201393098$ & $1$ & $0.52$ & $< 10^{-4}$ & $0.02$ & $0.024$ & $0.17$ & $0.044$ \\
 $201549860$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.013$ & $0.00071$ & $0.20$ & $0.014$ \\
@@ -32,13 +32,13 @@ $201617985$ & $1$ & $0.27$ & $< 10^{-4}$ & $0.12$ & $0.0017$ & $0.16$ & $0.12$ \
  {\bf $201555883$ } & {\bf  $1$ } & {\bf  $0.94$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.0044$ } & {\bf  $0.0004$ } & {\bf  $0.20$ } & {\bf  $0.0048$} \\
  {\bf $201629650$ } & {\bf  $1$ } & {\bf  $0.43$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.005$ } & {\bf  $0.0012$ } & {\bf  $0.17$ } & {\bf  $0.0062$} \\
  {\bf $201403446$ } & {\bf  $1$ } & {\bf  $0.18$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.0069$ } & {\bf  $0.0013$ } & {\bf  $0.13$ } & {\bf  $0.0083$} \\
- \color{red} $201565013$ \color{black} & \color{red}  $1$ \color{black} & \color{red}  $1.69$ \color{black} & \color{red}  $0.0023$ \color{black} & \color{red}  $0.14$ \color{black} & \color{red}  $0.82$ \color{black} & \color{red}  $0.07$ \color{black} & \color{red}  $0.96$\color{black} \\
+ \cellcolor{red} $201565013$  & \cellcolor{red}  $1$  & \cellcolor{red}  $1.69$  & \cellcolor{red}  $0.0023$  & \cellcolor{red}  $0.14$  & \cellcolor{red}  $0.82$  & \cellcolor{red}  $0.07$  & \cellcolor{red}  $0.96$\\
  {\bf $201912552$ } & {\bf  $1$ } & {\bf  $0.47$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.00058$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.22$ } & {\bf  $0.00058$} \\
 $201635569$ & $1$ & $0.79$ & $< 10^{-4}$ & $0.052$ & $0.071$ & $0.09$ & $0.12$ \\
 $201465501$ & $1$ & $0.68$ & $< 10^{-4}$ & $0.15$ & $0.0028$ & $0.14$ & $0.15$ \\
 $201569483$ & $1$ & $2.06$ & $0.48$ & $0.00061$ & $0.097$ & $0.01$ & $0.58$ \\
 $201929294$ & $1$ & $3.12$ & $< 10^{-4}$ & $0.053$ & $0.055$ & $0.05$ & $0.11$ \\
- \color{red} $201649426$ \color{black} & \color{red}  $1$ \color{black} & \color{red}  $3.10$ \color{black} & \color{red}  $0.81$ \color{black} & \color{red}  $0.0016$ \color{black} & \color{red}  $0.13$ \color{black} & \color{red}  $0.01$ \color{black} & \color{red}  $0.94$\color{black} \\
+ \cellcolor{red} $201649426$  & \cellcolor{red}  $1$  & \cellcolor{red}  $3.10$  & \cellcolor{red}  $0.81$  & \cellcolor{red}  $0.0016$  & \cellcolor{red}  $0.13$  & \cellcolor{red}  $0.01$  & \cellcolor{red}  $0.94$\\
  {\bf $201577035$ } & {\bf  $1$ } & {\bf  $0.14$ } & {\bf  $< 10^{-4}$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.00015$ } & {\bf  $0.20$ } & {\bf  $0.0002$} \\
 $201702477$ & $1$ & $0.70$ & $< 10^{-4}$ & $0.03$ & $0.29$ & $0.06$ & $0.32$ \\
 $201596316$ & $1$ & $0.45$ & $< 10^{-4}$ & $0.01$ & $0.0023$ & $0.17$ & $0.013$ \\
@@ -51,8 +51,8 @@ $201754305$ & $2$ & $0.38$ & $< 10^{-4}$ & $0.0099$ & $0.00069$ & $0.17$ & $0.01
 $201338508$ & $1$ & $0.63$ & $< 10^{-4}$ & $0.031$ & $0.00063$ & $0.17$ & $0.032$ \\
  {\bf $201367065$ } & {\bf  $1$ } & {\bf  $0.15$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.01$ } & {\bf  $< 10^{-4}$ } & {\bf  $0.18$ } & {\bf  $0.01$} \\
 $201445392$ & $1$ & $0.26$ & $< 10^{-4}$ & $0.013$ & $0.053$ & $0.22$ & $0.067$ \\
- \color{red} $201505350$ \color{black} & \color{red}  $1$ \color{black} & \color{red}  $2.69$ \color{black} & \color{red}  $< 10^{-4}$ \color{black} & \color{red}  $0.13$ \color{black} & \color{red}  $0.86$ \color{black} & \color{red}  $0.18$ \color{black} & \color{red}  $0.99$\color{black} \\
-$201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ \\
+ \cellcolor{red} $201505350$  & \cellcolor{red}  $1$  & \cellcolor{red}  $2.69$  & \cellcolor{red}  $< 10^{-4}$  & \cellcolor{red}  $0.13$  & \cellcolor{red}  $0.86$  & \cellcolor{red}  $0.18$  & \cellcolor{red}  $0.99$\\
+$201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ 
 
 \enddata
 \tablecomments{blurgh.}
