--- a/ms.tex
+++ b/ms.tex
@@ -450,7 +450,7 @@ period of the planet candidate, once the primary transit is masked out.
 \end{itemize}
 
 
-Table \ref{table:FPP} summarizes the results of these
+Table \ref{Tab:FPP} summarizes the results of these
 calculations, presenting the relative probability for each candidate
 to be caused by any of three false positive scenarios: an undiluted
 eclipsing binary (EB), a hierarchical triple eclipsing binary (HEB),
@@ -801,6 +801,7 @@ Now, if we want to update this with a new measurement $p^\prime(w)$,
 
 \include{table_stellarprops}
 
+%\include{table_fpp}
 
 \end{document}
 
