--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -5,7 +5,7 @@
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
 \tablecaption{False Positive Probability Calculation Results}
-\label{Tab:FPP}}
+\label{Tab:FPP}
 \tablehead{
 \colhead{EPIC} &
 \colhead{Cand. Num.} &
