--- a/ms.tex
+++ b/ms.tex
@@ -801,7 +801,7 @@ Now, if we want to update this with a new measurement $p^\prime(w)$,
 
 \include{table_stellarprops}
 
-%\include{table_fpp}
+\include{table_fpp}
 
 \end{document}
 
