--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -1,7 +1,7 @@
 
 \clearpage
 %\LongTables
-\begin{deluxetable*}{lccccccc}
+\begin{deluxetable*}{lcllllll}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
 \tablecaption{False Positive Probability Calculation Results}
