--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -17,42 +17,42 @@
 \colhead{FPP}
 }
 \startdata
- {\mathbf $201208431$ } & {\mathbf  $1$ } & {\mathbf  $0.51$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0058$ } & {\mathbf  $0.00011$ } & {\mathbf  $0.22$ } & {\mathbf  $0.0059$ \\
-} & \color{red} $201257461$  & \color{red}  $1$  & \color{red}  $0.59$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.072$  & \color{red}  $0.93$  & \color{red}  $0.22$  & \color{red}  $1$\\
- {\mathbf $201295312$ } & {\mathbf  $1$ } & {\mathbf  $0.04$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.008$ } & {\mathbf  $0.00014$ } & {\mathbf  $0.15$ } & {\mathbf  $0.0082$ \\
-} &$201338508$ & $1$ & $0.63$ & $< 10^{-4}$ & $0.031$ & $0.00063$ & $0.17$ & $0.032$ \\
- {\mathbf $201338508$ } & {\mathbf  $2$ } & {\mathbf  $0.33$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.006$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.17$ } & {\mathbf  $0.006$ \\
-} & {\mathbf $201367065$ } & {\mathbf  $1$ } & {\mathbf  $0.15$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.01$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.18$ } & {\mathbf  $0.01$ \\
-} & {\mathbf $201367065$ } & {\mathbf  $2$ } & {\mathbf  $0.67$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.00063$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.14$ } & {\mathbf  $0.00063$ \\
-} & {\mathbf $201384232$ } & {\mathbf  $1$ } & {\mathbf  $0.44$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.00017$ } & {\mathbf  $0.00023$ } & {\mathbf  $0.21$ } & {\mathbf  $0.0004$ \\
-} &$201393098$ & $1$ & $0.52$ & $< 10^{-4}$ & $0.02$ & $0.024$ & $0.17$ & $0.044$ \\
- {\mathbf $201403446$ } & {\mathbf  $1$ } & {\mathbf  $0.18$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0069$ } & {\mathbf  $0.0013$ } & {\mathbf  $0.13$ } & {\mathbf  $0.0083$ \\
-} &$201445392$ & $1$ & $0.26$ & $< 10^{-4}$ & $0.013$ & $0.053$ & $0.22$ & $0.067$ \\
+ ${\mathbf $201208431$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.51$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0058$ }$ & ${\mathbf  $0.00011$ }$ & ${\mathbf  $0.22$ }$ & ${\mathbf 0.0059}$ \\
+ \color{red} $201257461$  & \color{red}  $1$  & \color{red}  $0.59$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.072$  & \color{red}  $0.93$  & \color{red}  $0.22$  & \color{red}  $1$\\
+ ${\mathbf $201295312$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.04$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.008$ }$ & ${\mathbf  $0.00014$ }$ & ${\mathbf  $0.15$ }$ & ${\mathbf 0.0082}$ \\
+$201338508$ & $1$ & $0.63$ & $< 10^{-4}$ & $0.031$ & $0.00063$ & $0.17$ & $0.032$ \\
+ ${\mathbf $201338508$ }$ & ${\mathbf  $2$ }$ & ${\mathbf  $0.33$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.006$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.17$ }$ & ${\mathbf 0.006}$ \\
+ ${\mathbf $201367065$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.15$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.01$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.18$ }$ & ${\mathbf 0.01}$ \\
+ ${\mathbf $201367065$ }$ & ${\mathbf  $2$ }$ & ${\mathbf  $0.67$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.00063$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.14$ }$ & ${\mathbf 0.00063}$ \\
+ ${\mathbf $201384232$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.44$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.00017$ }$ & ${\mathbf  $0.00023$ }$ & ${\mathbf  $0.21$ }$ & ${\mathbf 0.0004}$ \\
+$201393098$ & $1$ & $0.52$ & $< 10^{-4}$ & $0.02$ & $0.024$ & $0.17$ & $0.044$ \\
+ ${\mathbf $201403446$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.18$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0069$ }$ & ${\mathbf  $0.0013$ }$ & ${\mathbf  $0.13$ }$ & ${\mathbf 0.0083}$ \\
+$201445392$ & $1$ & $0.26$ & $< 10^{-4}$ & $0.013$ & $0.053$ & $0.22$ & $0.067$ \\
 $201445392$ & $2$ & $0.18$ & $< 10^{-4}$ & $0.22$ & $0.048$ & $0.18$ & $0.27$ \\
 $201465501$ & $1$ & $0.68$ & $< 10^{-4}$ & $0.15$ & $0.0028$ & $0.14$ & $0.15$ \\
  \color{red} $201505350$  & \color{red}  $1$  & \color{red}  $2.69$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.13$  & \color{red}  $0.86$  & \color{red}  $0.18$  & \color{red}  $0.99$\\
- {\mathbf $201505350$ } & {\mathbf  $2$ } & {\mathbf  $0.70$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0025$ } & {\mathbf  $0.00013$ } & {\mathbf  $0.07$ } & {\mathbf  $0.0026$ \\
-} & {\mathbf $201546283$ } & {\mathbf  $1$ } & {\mathbf  $0.15$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.16$ } & {\mathbf  $< 10^{-4}$ \\
-} &$201549860$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.013$ & $0.00071$ & $0.20$ & $0.014$ \\
- {\mathbf $201555883$ } & {\mathbf  $1$ } & {\mathbf  $0.94$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0044$ } & {\mathbf  $0.0004$ } & {\mathbf  $0.20$ } & {\mathbf  $0.0048$ \\
-} & \color{red} $201565013$  & \color{red}  $1$  & \color{red}  $1.69$  & \color{red}  $0.0023$  & \color{red}  $0.14$  & \color{red}  $0.82$  & \color{red}  $0.07$  & \color{red}  $0.96$\\
+ ${\mathbf $201505350$ }$ & ${\mathbf  $2$ }$ & ${\mathbf  $0.70$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0025$ }$ & ${\mathbf  $0.00013$ }$ & ${\mathbf  $0.07$ }$ & ${\mathbf 0.0026}$ \\
+ ${\mathbf $201546283$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.15$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.16$ }$ & ${\mathbf < 10^{-4}}$ \\
+$201549860$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.013$ & $0.00071$ & $0.20$ & $0.014$ \\
+ ${\mathbf $201555883$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.94$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0044$ }$ & ${\mathbf  $0.0004$ }$ & ${\mathbf  $0.20$ }$ & ${\mathbf 0.0048}$ \\
+ \color{red} $201565013$  & \color{red}  $1$  & \color{red}  $1.69$  & \color{red}  $0.0023$  & \color{red}  $0.14$  & \color{red}  $0.82$  & \color{red}  $0.07$  & \color{red}  $0.96$\\
 $201569483$ & $1$ & $2.06$ & $0.48$ & $0.00061$ & $0.097$ & $0.01$ & $0.58$ \\
- {\mathbf $201577035$ } & {\mathbf  $1$ } & {\mathbf  $0.14$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.00015$ } & {\mathbf  $0.20$ } & {\mathbf  $0.0002$ \\
-} &$201596316$ & $1$ & $0.45$ & $< 10^{-4}$ & $0.01$ & $0.0023$ & $0.17$ & $0.013$ \\
- {\mathbf $201613023$ } & {\mathbf  $1$ } & {\mathbf  $0.08$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0016$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.15$ } & {\mathbf  $0.0016$ \\
-} &$201617985$ & $1$ & $0.27$ & $< 10^{-4}$ & $0.12$ & $0.0017$ & $0.16$ & $0.12$ \\
- {\mathbf $201629650$ } & {\mathbf  $1$ } & {\mathbf  $0.43$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.005$ } & {\mathbf  $0.0012$ } & {\mathbf  $0.17$ } & {\mathbf  $0.0062$ \\
-} &$201635569$ & $1$ & $0.79$ & $< 10^{-4}$ & $0.052$ & $0.071$ & $0.09$ & $0.12$ \\
+ ${\mathbf $201577035$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.14$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.00015$ }$ & ${\mathbf  $0.20$ }$ & ${\mathbf 0.0002}$ \\
+$201596316$ & $1$ & $0.45$ & $< 10^{-4}$ & $0.01$ & $0.0023$ & $0.17$ & $0.013$ \\
+ ${\mathbf $201613023$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.08$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0016$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.15$ }$ & ${\mathbf 0.0016}$ \\
+$201617985$ & $1$ & $0.27$ & $< 10^{-4}$ & $0.12$ & $0.0017$ & $0.16$ & $0.12$ \\
+ ${\mathbf $201629650$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.43$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.005$ }$ & ${\mathbf  $0.0012$ }$ & ${\mathbf  $0.17$ }$ & ${\mathbf 0.0062}$ \\
+$201635569$ & $1$ & $0.79$ & $< 10^{-4}$ & $0.052$ & $0.071$ & $0.09$ & $0.12$ \\
  \color{red} $201649426$  & \color{red}  $1$  & \color{red}  $3.10$  & \color{red}  $0.81$  & \color{red}  $0.0016$  & \color{red}  $0.13$  & \color{red}  $0.01$  & \color{red}  $0.94$\\
 $201702477$ & $1$ & $0.70$ & $< 10^{-4}$ & $0.03$ & $0.29$ & $0.06$ & $0.32$ \\
- {\mathbf $201736247$ } & {\mathbf  $1$ } & {\mathbf  $0.42$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0015$ } & {\mathbf  $0.00092$ } & {\mathbf  $0.22$ } & {\mathbf  $0.0024$ \\
-} &$201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ \\
+ ${\mathbf $201736247$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.42$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0015$ }$ & ${\mathbf  $0.00092$ }$ & ${\mathbf  $0.22$ }$ & ${\mathbf 0.0024}$ \\
+$201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ \\
 $201754305$ & $2$ & $0.38$ & $< 10^{-4}$ & $0.0099$ & $0.00069$ & $0.17$ & $0.011$ \\
 $201779067$ & $1$ & $1.97$ & $0.034$ & $0.038$ & $0.3$ & $0.03$ & $0.37$ \\
 $201828749$ & $1$ & $0.39$ & $< 10^{-4}$ & $0.014$ & $0.0024$ & $0.17$ & $0.016$ \\
- {\mathbf $201855371$ } & {\mathbf  $1$ } & {\mathbf  $0.62$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.0006$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.20$ } & {\mathbf  $0.00071$ \\
-} & {\mathbf $201912552$ } & {\mathbf  $1$ } & {\mathbf  $0.47$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.00058$ } & {\mathbf  $< 10^{-4}$ } & {\mathbf  $0.22$ } & {\mathbf  $0.00058$ \\
-} &$201929294$ & $1$ & $3.12$ & $< 10^{-4}$ & $0.053$ & $0.055$ & $0.05$ & $0.11$ 
+ ${\mathbf $201855371$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.62$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.0006$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.20$ }$ & ${\mathbf 0.00071}$ \\
+ ${\mathbf $201912552$ }$ & ${\mathbf  $1$ }$ & ${\mathbf  $0.47$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.00058$ }$ & ${\mathbf  $< 10^{-4}$ }$ & ${\mathbf  $0.22$ }$ & ${\mathbf 0.00058}$ \\
+$201929294$ & $1$ & $3.12$ & $< 10^{-4}$ & $0.053$ & $0.055$ & $0.05$ & $0.11$ 
 
 \enddata
 \tablecomments{blurgh.}
