--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -19,7 +19,7 @@
 }
 \startdata
 $201208431$ & $1$ & $0.51$ & $< 10^{-4}$ & $0.0058$ & $0.00011$ & $0.22$ & $0.0059$ & Validated \\
-$201257461$ & $1$ & $0.59$ & $< 10^{-4}$ & $0.072$ & $0.93$ & $0.22$ & $1$ & FP \\
+ \color{red} $201257461$  & \color{red}  $1$  & \color{red}  $0.59$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.072$  & \color{red}  $0.93$  & \color{red}  $0.22$  & \color{red}  $1$  & \color{red}  FP\\
 $201295312$ & $1$ & $0.04$ & $< 10^{-4}$ & $0.008$ & $0.00014$ & $0.15$ & $0.0082$ & Validated \\
 $201338508$ & $1$ & $0.63$ & $< 10^{-4}$ & $0.031$ & $0.00063$ & $0.17$ & $0.032$ & Candidate \\
 $201338508$ & $2$ & $0.33$ & $< 10^{-4}$ & $0.006$ & $< 10^{-4}$ & $0.17$ & $0.006$ & Validated \\
@@ -31,12 +31,12 @@ $201403446$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.0069$ & $0.0013$ & $0.13$ & $0.008
 $201445392$ & $1$ & $0.26$ & $< 10^{-4}$ & $0.013$ & $0.053$ & $0.22$ & $0.067$ & Candidate \\
 $201445392$ & $2$ & $0.18$ & $< 10^{-4}$ & $0.22$ & $0.048$ & $0.18$ & $0.27$ & Candidate \\
 $201465501$ & $1$ & $0.68$ & $< 10^{-4}$ & $0.15$ & $0.0028$ & $0.14$ & $0.15$ & Candidate \\
-$201505350$ & $1$ & $2.69$ & $< 10^{-4}$ & $0.13$ & $0.86$ & $0.18$ & $0.99$ & FP \\
+ \color{red} $201505350$  & \color{red}  $1$  & \color{red}  $2.69$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.13$  & \color{red}  $0.86$  & \color{red}  $0.18$  & \color{red}  $0.99$  & \color{red}  FP\\
 $201505350$ & $2$ & $0.70$ & $< 10^{-4}$ & $0.0025$ & $0.00013$ & $0.07$ & $0.0026$ & Validated \\
 $201546283$ & $1$ & $0.15$ & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Validated \\
 $201549860$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.013$ & $0.00071$ & $0.20$ & $0.014$ & Candidate \\
 $201555883$ & $1$ & $0.94$ & $< 10^{-4}$ & $0.0044$ & $0.0004$ & $0.20$ & $0.0048$ & Validated \\
-$201565013$ & $1$ & $1.69$ & $0.0023$ & $0.14$ & $0.82$ & $0.07$ & $0.96$ & FP \\
+ \color{red} $201565013$  & \color{red}  $1$  & \color{red}  $1.69$  & \color{red}  $0.0023$  & \color{red}  $0.14$  & \color{red}  $0.82$  & \color{red}  $0.07$  & \color{red}  $0.96$  & \color{red}  FP\\
 $201569483$ & $1$ & $2.06$ & $0.48$ & $0.00061$ & $0.097$ & $0.01$ & $0.58$ & Candidate \\
 $201577035$ & $1$ & $0.14$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.00015$ & $0.20$ & $0.0002$ & Validated \\
 $201596316$ & $1$ & $0.45$ & $< 10^{-4}$ & $0.01$ & $0.0023$ & $0.17$ & $0.013$ & Candidate \\
@@ -44,7 +44,7 @@ $201613023$ & $1$ & $0.08$ & $< 10^{-4}$ & $0.0016$ & $< 10^{-4}$ & $0.15$ & $0.
 $201617985$ & $1$ & $0.27$ & $< 10^{-4}$ & $0.12$ & $0.0017$ & $0.16$ & $0.12$ & Candidate \\
 $201629650$ & $1$ & $0.43$ & $< 10^{-4}$ & $0.005$ & $0.0012$ & $0.17$ & $0.0062$ & Validated \\
 $201635569$ & $1$ & $0.79$ & $< 10^{-4}$ & $0.052$ & $0.071$ & $0.09$ & $0.12$ & Candidate \\
-$201649426$ & $1$ & $3.10$ & $0.81$ & $0.0016$ & $0.13$ & $0.01$ & $0.94$ & FP \\
+ \color{red} $201649426$  & \color{red}  $1$  & \color{red}  $3.10$  & \color{red}  $0.81$  & \color{red}  $0.0016$  & \color{red}  $0.13$  & \color{red}  $0.01$  & \color{red}  $0.94$  & \color{red}  FP\\
 $201702477$ & $1$ & $0.70$ & $< 10^{-4}$ & $0.03$ & $0.29$ & $0.06$ & $0.32$ & Candidate \\
 $201736247$ & $1$ & $0.42$ & $< 10^{-4}$ & $0.0015$ & $0.00092$ & $0.22$ & $0.0024$ & Validated \\
 $201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ & Candidate \\
