--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -18,41 +18,41 @@
 \colhead{Disposition}
 }
 \startdata
-$201208431$ & $1$ & $0.51$ & $< 10^{-4}$ & $0.0058$ & $0.00011$ & $0.22$ & $0.0059$ & Validated \\
+$201208431$ & $1$ & $0.51$ & $< 10^{-4}$ & $0.0058$ & $0.00011$ & $0.22$ & $0.0059$ & Planet \\
  \color{red} $201257461$  & \color{red}  $1$  & \color{red}  $0.59$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.072$  & \color{red}  $0.93$  & \color{red}  $0.22$  & \color{red}  $1$  & \color{red}  FP\\
-$201295312$ & $1$ & $0.04$ & $< 10^{-4}$ & $0.008$ & $0.00014$ & $0.15$ & $0.0082$ & Validated \\
+$201295312$ & $1$ & $0.04$ & $< 10^{-4}$ & $0.008$ & $0.00014$ & $0.15$ & $0.0082$ & Planet \\
 $201338508$ & $1$ & $0.63$ & $< 10^{-4}$ & $0.031$ & $0.00063$ & $0.17$ & $0.032$ & Candidate \\
-$201338508$ & $2$ & $0.33$ & $< 10^{-4}$ & $0.006$ & $< 10^{-4}$ & $0.17$ & $0.006$ & Validated \\
-$201367065$ & $1$ & $0.15$ & $< 10^{-4}$ & $0.01$ & $< 10^{-4}$ & $0.18$ & $0.01$ & Validated \\
-$201367065$ & $2$ & $0.67$ & $< 10^{-4}$ & $0.00063$ & $< 10^{-4}$ & $0.14$ & $0.00063$ & Validated \\
-$201384232$ & $1$ & $0.44$ & $< 10^{-4}$ & $0.00017$ & $0.00023$ & $0.21$ & $0.0004$ & Validated \\
+$201338508$ & $2$ & $0.33$ & $< 10^{-4}$ & $0.006$ & $< 10^{-4}$ & $0.17$ & $0.006$ & Planet \\
+$201367065$ & $1$ & $0.15$ & $< 10^{-4}$ & $0.01$ & $< 10^{-4}$ & $0.18$ & $0.01$ & Planet \\
+$201367065$ & $2$ & $0.67$ & $< 10^{-4}$ & $0.00063$ & $< 10^{-4}$ & $0.14$ & $0.00063$ & Planet \\
+$201384232$ & $1$ & $0.44$ & $< 10^{-4}$ & $0.00017$ & $0.00023$ & $0.21$ & $0.0004$ & Planet \\
 $201393098$ & $1$ & $0.52$ & $< 10^{-4}$ & $0.02$ & $0.024$ & $0.17$ & $0.044$ & Candidate \\
-$201403446$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.0069$ & $0.0013$ & $0.13$ & $0.0083$ & Validated \\
+$201403446$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.0069$ & $0.0013$ & $0.13$ & $0.0083$ & Planet \\
 $201445392$ & $1$ & $0.26$ & $< 10^{-4}$ & $0.013$ & $0.053$ & $0.22$ & $0.067$ & Candidate \\
 $201445392$ & $2$ & $0.18$ & $< 10^{-4}$ & $0.22$ & $0.048$ & $0.18$ & $0.27$ & Candidate \\
 $201465501$ & $1$ & $0.68$ & $< 10^{-4}$ & $0.15$ & $0.0028$ & $0.14$ & $0.15$ & Candidate \\
  \color{red} $201505350$  & \color{red}  $1$  & \color{red}  $2.69$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.13$  & \color{red}  $0.86$  & \color{red}  $0.18$  & \color{red}  $0.99$  & \color{red}  FP\\
-$201505350$ & $2$ & $0.70$ & $< 10^{-4}$ & $0.0025$ & $0.00013$ & $0.07$ & $0.0026$ & Validated \\
-$201546283$ & $1$ & $0.15$ & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Validated \\
+$201505350$ & $2$ & $0.70$ & $< 10^{-4}$ & $0.0025$ & $0.00013$ & $0.07$ & $0.0026$ & Planet \\
+$201546283$ & $1$ & $0.15$ & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $< 10^{-4}$ & Planet \\
 $201549860$ & $1$ & $0.18$ & $< 10^{-4}$ & $0.013$ & $0.00071$ & $0.20$ & $0.014$ & Candidate \\
-$201555883$ & $1$ & $0.94$ & $< 10^{-4}$ & $0.0044$ & $0.0004$ & $0.20$ & $0.0048$ & Validated \\
+$201555883$ & $1$ & $0.94$ & $< 10^{-4}$ & $0.0044$ & $0.0004$ & $0.20$ & $0.0048$ & Planet \\
  \color{red} $201565013$  & \color{red}  $1$  & \color{red}  $1.69$  & \color{red}  $0.0023$  & \color{red}  $0.14$  & \color{red}  $0.82$  & \color{red}  $0.07$  & \color{red}  $0.96$  & \color{red}  FP\\
 $201569483$ & $1$ & $2.06$ & $0.48$ & $0.00061$ & $0.097$ & $0.01$ & $0.58$ & Candidate \\
-$201577035$ & $1$ & $0.14$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.00015$ & $0.20$ & $0.0002$ & Validated \\
+$201577035$ & $1$ & $0.14$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.00015$ & $0.20$ & $0.0002$ & Planet \\
 $201596316$ & $1$ & $0.45$ & $< 10^{-4}$ & $0.01$ & $0.0023$ & $0.17$ & $0.013$ & Candidate \\
-$201613023$ & $1$ & $0.08$ & $< 10^{-4}$ & $0.0016$ & $< 10^{-4}$ & $0.15$ & $0.0016$ & Validated \\
+$201613023$ & $1$ & $0.08$ & $< 10^{-4}$ & $0.0016$ & $< 10^{-4}$ & $0.15$ & $0.0016$ & Planet \\
 $201617985$ & $1$ & $0.27$ & $< 10^{-4}$ & $0.12$ & $0.0017$ & $0.16$ & $0.12$ & Candidate \\
-$201629650$ & $1$ & $0.43$ & $< 10^{-4}$ & $0.005$ & $0.0012$ & $0.17$ & $0.0062$ & Validated \\
+$201629650$ & $1$ & $0.43$ & $< 10^{-4}$ & $0.005$ & $0.0012$ & $0.17$ & $0.0062$ & Planet \\
 $201635569$ & $1$ & $0.79$ & $< 10^{-4}$ & $0.052$ & $0.071$ & $0.09$ & $0.12$ & Candidate \\
  \color{red} $201649426$  & \color{red}  $1$  & \color{red}  $3.10$  & \color{red}  $0.81$  & \color{red}  $0.0016$  & \color{red}  $0.13$  & \color{red}  $0.01$  & \color{red}  $0.94$  & \color{red}  FP\\
 $201702477$ & $1$ & $0.70$ & $< 10^{-4}$ & $0.03$ & $0.29$ & $0.06$ & $0.32$ & Candidate \\
-$201736247$ & $1$ & $0.42$ & $< 10^{-4}$ & $0.0015$ & $0.00092$ & $0.22$ & $0.0024$ & Validated \\
+$201736247$ & $1$ & $0.42$ & $< 10^{-4}$ & $0.0015$ & $0.00092$ & $0.22$ & $0.0024$ & Planet \\
 $201754305$ & $1$ & $0.65$ & $< 10^{-4}$ & $0.015$ & $0.0016$ & $0.18$ & $0.017$ & Candidate \\
 $201754305$ & $2$ & $0.38$ & $< 10^{-4}$ & $0.0099$ & $0.00069$ & $0.17$ & $0.011$ & Candidate \\
 $201779067$ & $1$ & $1.97$ & $0.034$ & $0.038$ & $0.3$ & $0.03$ & $0.37$ & Candidate \\
 $201828749$ & $1$ & $0.39$ & $< 10^{-4}$ & $0.014$ & $0.0024$ & $0.17$ & $0.016$ & Candidate \\
-$201855371$ & $1$ & $0.62$ & $< 10^{-4}$ & $0.0006$ & $< 10^{-4}$ & $0.20$ & $0.00071$ & Validated \\
-$201912552$ & $1$ & $0.47$ & $< 10^{-4}$ & $0.00058$ & $< 10^{-4}$ & $0.22$ & $0.00058$ & Validated \\
+$201855371$ & $1$ & $0.62$ & $< 10^{-4}$ & $0.0006$ & $< 10^{-4}$ & $0.20$ & $0.00071$ & Planet \\
+$201912552$ & $1$ & $0.47$ & $< 10^{-4}$ & $0.00058$ & $< 10^{-4}$ & $0.22$ & $0.00058$ & Planet \\
 $201929294$ & $1$ & $3.12$ & $< 10^{-4}$ & $0.053$ & $0.055$ & $0.05$ & $0.11$ & Candidate 
 
 \enddata
