--- a/ms.tex
+++ b/ms.tex
@@ -21,7 +21,7 @@
 \usepackage{amsmath}
 \usepackage{ulem}
 \usepackage{bm}
-\usepackage[usenames,dvipsnames,table]{xcolor}
+\usepackage[usenames,dvipsnames]{xcolor}
 
 
 %\usepackage{pdflscape}
@@ -457,7 +457,6 @@ to be caused by any of three false positive scenarios: an undiluted
 eclipsing binary (EB), a hierarchical triple eclipsing binary (HEB),
 and a chance-aligned background(/foreground) eclipsing binary (BEB).
 
-
 We find that \Nfp\ of the presented candidates FPP $>$90\%;
 these we consider to be likely false positives.
 On the other hand, we find that \Nvalidated\ candidates
@@ -639,7 +638,10 @@ EPIC 201555883 was originally listed in \paperit\ as a planet candidate.
 After submission of that work, this object of interest was identified as
 having a transit ephemeris consistent with that of EPIC 201569483,
 which we identify as a likely eclipsing binary due to the observed transit
-depth \anytodo{Right? Right?}.
+depth \anytodo{Right? Right?  Can this be more quantitative?  Are these two stars 
+close to one another?  How bright is  the purported parent? Are they 
+On/near the same CCD column?  FPP gives this a pass, so we 
+need to be clear about this.}.
 We conclude the observed transit signal from EPIC 201555883 is likely the result
 of an instrumental artifact.
 
