fpp table changes

--- a/ms.tex
+++ b/ms.tex
@@ -89,8 +89,8 @@
 \newcommand{\anytodo}[1]{\todo{ANYONE}{NavyBlue}{#1}}
 
 \newcommand{\Nfp}{4}
-\newcommand{\Nvalidated}{21}
-\newcommand{\Nlimbo}{11}
+\newcommand{\Nvalidated}{22}
+\newcommand{\Nlimbo}{10} %adds to 36?  good.
 
 \begin{document}
 
@@ -800,7 +800,7 @@ Now, if we want to update this with a new measurement $p^\prime(w)$,
 \bibliography{exopapers}
 
 \include{table_photometry}
-
+\turnpage
 
 \include{table_stellarprops}
 
