added reference; more tdm edits

--- a/ms.tex
+++ b/ms.tex
@@ -408,8 +408,8 @@ planet if (a) it is a highly grazing eclipse, or (b) the binary system
 comprises only a small fraction of the total light in the photometric
 aperture, resulting in a diluted eclipse depth.
 When possible, such astrophsycial false positive scenarios are traditionally
-ruled out by detailed follow-up observations, such as high-resolution
-imaging or radial-velocity measurements.
+ruled out by detailed follow-up observations, often a combination of 
+high-resolution imaging and radial-velocity measurements.
 However, the \kep\ mission, with its thousands of planet candidates
 around mostly faint stars, necessitated a paradigm shift---a move
 toward probabilistic interpretation of transit signals, rather than
@@ -424,7 +424,7 @@ the typical shape of each, comparing to the observed transit shape.
 It then combines this information with observationally motivated prior
 assumptions about the populations of field stars, the properties of
 multiple star systems, and the occurrence rate of planets as determined
-from \kep\ \citet{Fressin13}, in order to determine the probability that
+from \kep\ \citep{Fressin13}, in order to determine the probability that
 the observed signal may be a false positive.
 Similar in spirit to other published methods of
 probabilistic validation, such as Blender \citep{} and PASTIS
@@ -439,8 +439,8 @@ to calculate false positive probabilities (FPPs) for each of these
 K2 candidates.  We impose the following constraints on false positive
 scenarios:
 \begin{itemize}
-\item A chance-aligned eclipsing binary system may reside within
-a sky area equivalent to 8 arcsecond radius of the target star.
+\item A chance-aligned eclipsing binary system may reside anywhere within
+an 8 arcsecond radius from the target star.
 \item The maximum allowed depth of a potential secondary eclipse event,
 determined as the most significantly detected signal at the same
 period of the planet candidate, once the primary transit is masked out.
@@ -464,7 +464,7 @@ nor low enough to securely validate.
 We emphasize that the majority of these planets were validated based 
 solely on the transit signal, with no need for follow-up imaging.  This
 demonstrates the utility of \texttt{vespa} analysis, which will be
-crucial to interpreting future \kt\ detected candidates and prioritizing
+crucial to interpreting future \KT\ detected candidates and prioritizing
 follow-up observing efforts.
 
 \subsection{Adaptive Optics Imaging}
