--- a/ms.tex
+++ b/ms.tex
@@ -441,14 +441,14 @@ scenarios:
 \begin{itemize}
 \item A chance-aligned eclipsing binary system may reside anywhere within
 an 8 arcsecond radius from the target star.
-\item The maximum allowed depth of a potential secondary eclipse event,
-determined as the most significantly detected signal at the same
+\item The maximum allowed depth of a potential secondary eclipse event
+is the most significantly detected signal at the same
 period of the planet candidate, once the primary transit is masked out.
-\item High-resolution imaging constraints, where available (see below)
+\item Blended stars must be allowed by the available adaptive optics
+and archival imaging data (discussed in detail below).
 \end{itemize}
 
-
-Table \ref{Tab:FPP} summarizes the results of these
+Table \ref{Table:FPP} summarizes the results of these
 calculations, presenting the relative probability for each candidate
 to be caused by any of three false positive scenarios: an undiluted
 eclipsing binary (EB), a hierarchical triple eclipsing binary (HEB),
