--- a/ms.tex
+++ b/ms.tex
@@ -275,7 +275,7 @@ To convert the observed photometric data into physical properties for each
 star, we used the publicly available \texttt{isochrones} Python module\footnote{
 \url{http://github.com/timothydmorton/isochrones}}, a general-purpose
 interpolation tool for stellar model grids.  
-This software does trilinear interpolation in mass-age-\feh\ space for any
+This software does trilinear interpolation in mass--age--\feh\ space for any
 given set of model grids, thus being able to predict the value for any
 physical or photometric property provided by the models at any values of
 mass, age, and \feh\ within the boundaries of the grid.  
