--- a/ms.tex
+++ b/ms.tex
@@ -316,10 +316,10 @@ atmospheres, which have been shown to predict near-IR colors that are too blue
 \citep{Thompson14}.
 
 In order to try to encapsulate the effect of model uncertainties, we also run 
-MCMC chains using \texttt{isochrones} with photometric errors inflated 
-artificially by a factor of three.  We provide full chains using both
-inflated and un-inflated errors, though in the rest of this work we adopt
-the results obtained using inflated uncertainties.
+MCMC chains with photometric errors inflated artificially by a factor of three.  
+We provide full chains using both inflated and un-inflated uncertainties, 
+though in the rest of this work we adopt
+the results obtained using the inflated values.
 
 \anytodo{Is this paragraph necessary anymore?}
 We find that by measuring stellar parameters without any WISE data (that is, using
